--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom box-shadow zen-menu-bg">
-  <h5 class="my-0 mr-md-auto font-weight-normal"><a class="p-2 retroshadow" href="/zenindex">ZT</a></h5>
+  <span class="my-0 mr-md-auto font-weight-normal"><a class="zen-logo" href="/zenindex">ZT</a></span>
 
   <nav class="my-2 my-md-0 mr-md-3">
-    <div class="row">
+    <div class="row zen-menu">
       <div class="col-12 text-center">
         <a class="p-2" href="/stock" i18n="Stock@@stock">Stock</a> |
         <a class="p-2" href="/experience" i18n="Experiences@@experiences">Experiences</a> |
@@ -17,6 +17,7 @@
     </div>
 
   </nav>
+  <zen-toggle-mode></zen-toggle-mode>
   <zen-logoff></zen-logoff>
   <!-- <a class="btn btn-outline-primary" href="#">Sign up</a> -->
 </div>
