--- a/src/app/zen-auth/welcome-page/welcome-page.component.html
+++ b/src/app/zen-auth/welcome-page/welcome-page.component.html
@@ -1,15 +1,11 @@
-
-<div class="container-fluid stra">
-  <div class="display-3 welcome">Welcome</div>
-  <hr>
-
-  <div class="lead">Please login to proceed</div>
-  <div class="row mt-3">
-    <div class="col-4">
-      <zen-zentrader-auth></zen-zentrader-auth>
+<div class="container-fluid">
+  <div class="row stra">
+    <div class="col-auto mr-auto">
+      <div class="display-3 welcome pl-3">Welcome to <span class="zt-logo">ZT</span></div>
     </div>
-    <div class="col-8">
-      <zen-fortune-teller></zen-fortune-teller>       
+    <div class="col-auto align-center welcome"><h5><b>Ready to make money?</b></h5></div>
+    <div class="col-auto align-center">
+          <zen-zentrader-auth></zen-zentrader-auth>
     </div>
   </div>
 </div>
