--- a/src/app/experience/experience-edit/experience-edit.component.html
+++ b/src/app/experience/experience-edit/experience-edit.component.html
@@ -8,7 +8,7 @@
 
       <div class="form-group">
         <label for="price" i18n="Price@@price">Price</label>:
-        <input type="text" class="form-control form-control-sm border border-primary" [ngStyle]="{'background': getPiranhaIndicator(experience)}" id="price" [(ngModel)]="experience.price" (keydown.enter)="edit();" name="price">
+        <input type="text" class="form-control form-control-sm border border-primary" [ngClass]="[getPiranhaIndicator(experience)]" id="price" [(ngModel)]="experience.price" (keydown.enter)="edit();" name="price">
       </div>
 
       <div class="form-group">
@@ -64,7 +64,7 @@
       </div>
       <div class="form-group">
         <label for="stop_loss" i18n="Stop Loss@@stopLoss">Stop Loss</label>: 
-        <input type="text" class="form-control form-control-sm border border-primary" [ngStyle]="{'background': getPiranhaIndicator(experience)}" id="stop_loss" [(ngModel)]="experience.stop_loss" (keydown.enter)="edit();" name="stop_loss">
+        <input type="text" class="form-control form-control-sm border border-primary" [ngClass]="[getPiranhaIndicator(experience)]" id="stop_loss" [(ngModel)]="experience.stop_loss" (keydown.enter)="edit();" name="stop_loss">
       </div>
 
       <div class="form-group">
