--- a/src/app/operation/buy-list/buy-list.component.html
+++ b/src/app/operation/buy-list/buy-list.component.html
@@ -9,9 +9,9 @@
           <p><span i18n="Stock@@stock">Stock Price</span>: R$ {{ buy.stock_data.price }}</p>
           <p><span i18n="Amount@@amount">Amount</span>: {{ buy.amount }}</p>
           <hr>
-          <p><span i18n="Profit@@profit">Profit:</span>R$ <span [ngStyle]="{'color': buy.operation_gain | number: '1.2-2' | numberColor }">{{
-              buy.operation_gain | number: '1.2-2' }}</span>/ <span [ngStyle]="{'color': buy.operation_gain_percent |
-              number: '1.2-2' | numberColor }">{{ buy.operation_gain_percent | number: '1.2-2' }}</span>%</p>
+          <p><span i18n="Profit@@profit">Profit:</span>R$ <span [ngClass]="[buy.operation_gain | number: '1.2-2' | numberColor ]">{{
+              buy.operation_gain | number: '1.2-2' }}</span>/
+            <span [ngClass]="[buy.operation_gain_percent | number: '1.2-2' | numberColor ]">{{ buy.operation_gain_percent | number: '1.2-2' }}</span>%</p>
           
           <hr>
         </div>
