--- a/src/app/zen-fortune/fortune-teller/fortune-teller.component.html
+++ b/src/app/zen-fortune/fortune-teller/fortune-teller.component.html
@@ -1,2 +1,2 @@
-<p class="text-center font-italic lead fortuneColor" [innerHtml]="fortune | zensafe">
+<p class="text-center font-italic fortuneColor" [innerHtml]="fortune | zensafe">
 </p>
