--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -8,11 +8,10 @@
         <a class="p-2" href="/experience" i18n="Experiences@@experiences">Experiences</a> |
         <a class="p-2" href="/buy-focus" i18n="Purchases@@purchases">Purchases</a> |
         <a class="p-2" href="/sell-focus" i18n="Sales@@sales">Sales</a> |
-        <a class="p-2" href="/operations-center" i18n="Operations Center@@operationsCenter">Operations Center</a>
+        <a class="p-2" href="/report-overview" i18n="Report Overview@@reportOverview">Report</a>
       </div>
         <div class="col-12 text-center">
-        <a class="p-2" href="/learning" i18n="Learning@@learning">Learning</a> |
-        <a class="p-2" href="/report-overview" i18n="Report Overview@@reportOverview">Report</a>
+        <a class="p-2" href="/learning" i18n="Learning@@learning">Learning</a>
       </div>
     </div>
 
