--- a/src/app/report/overview-report/overview-report.component.html
+++ b/src/app/report/overview-report/overview-report.component.html
@@ -3,7 +3,7 @@
 <div class="container">
   <section class="row">
     <div class="col-12">
-      <h4 style="color: rgba(0,0,0,0.6);" i18n="Monthly Report@@monthlyReport">Monthly Report</h4>
+      <h4 i18n="Monthly Report@@monthlyReport">Monthly Report</h4>
 
       <hr>
       <zen-monthly-report></zen-monthly-report>
@@ -12,7 +12,7 @@
 
   <section class="row">
     <div class="col-12">
-      <h4 style="color: rgba(0,0,0,0.6);" i18n="Total result@@totalResult">Total result</h4>
+      <h4 i18n="Total result@@totalResult">Total result</h4>
 
       <hr>
       <zen-total-profit-report></zen-total-profit-report>
