--- a/src/app/ui/toggle-mode/toggle-mode.component.html
+++ b/src/app/ui/toggle-mode/toggle-mode.component.html
@@ -1,2 +1,2 @@
-<button type="button" (click)="setNightMode();" class="btn btn-primary"><i class="fas fa-adjust"></i></button>
+<button type="button" (click)="setNightMode();" class="btn btn-primary" title="Toggle Dark mode! (Good night)"><i class="fas fa-moon"></i></button>
 
