--- a/src/app/operation/buy-card/buy-card.component.css
+++ b/src/app/operation/buy-card/buy-card.component.css
@@ -2,9 +2,9 @@
 
 .star {
   font-size: 1.5rem;
-  color: #EAEDEF;
+  color: var(--light);
 }
 
 .filled {
-  color: #007BFF;
+  color: var(--purple);
 }
