--- a/src/app/overview/operations-overview/operations-overview.component.css
+++ b/src/app/overview/operations-overview/operations-overview.component.css
@@ -3,3 +3,30 @@
   color: var(--menu-fn-color);
   font-weight: bold;
 }
+
+.divider {
+  display: flex;
+}
+
+.divider:before, .divider:after {
+  content: "";
+  flex: 1;
+}
+
+.line {
+  align-items: center;
+  margin: 1em -1em;
+}
+.line:before, .line:after {
+  height: 1px;
+  margin: 0 1em;
+}
+
+.one-line:before, .one-line:after {
+  background: var(--gray-dark);
+}
+
+.razor:before, .razor:after {
+  box-shadow: 0 0.5px 0 var(--gray-dark);
+}
+
