Added other themes

--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -11,7 +11,8 @@
         <a class="p-2" href="/report-overview" i18n="Report Overview@@reportOverview">Report</a>
       </div>
         <div class="col-12 text-center">
-        <a class="p-2" href="/learning" i18n="Learning@@learning">Learning</a>
+        <a class="p-2" href="/learning" i18n="Learning@@learning">Learning</a> |
+        <a class="p-2" href="/theme-chooser" i18n="ThemeChooser@@themeChooser">Themes</a>
       </div>
     </div>
 
